--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
   <title>TeamCards & MultiUser Table</title>
 </head>
 <body>
